Practica-Kubernetes/kanban/kanban.deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanban-service
  labels:
    app: kanban-service
spec:
  selector:
    app: kanban-app
  ports:
    - port: 80
      name: kanban-port
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanban-app
  labels:
    app: kanban-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanban-app
  template:
    metadata:
      labels:
        app: kanban-app
    spec:
      containers:
      - name: kanban-app
        image: kanboard/kanboard:v1.2.9
        imagePullPolicy: Always
        ports:
        - name: kanban-port
          containerPort: 80
