Practica-Kubernetes/kanban/kanban.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: public # Cambiar a nginx para Rancher
  name: kanban-ingress
spec:
  rules:
  #- host: # Aca cambiar host por dominio - UM -> amontana.my.kube.um.edu.ar
  - http:
      paths:
      - backend:
          service:
            name: kanban-service
            port:
              number: 80
        path: /
        pathType: Prefix
